modified the index.html

--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                 <div class="project-card">
                     <h2>Study Timetable Planner</h2>
                     <p>Create your weekly study plan with AM/PM time slots easily.</p>
-                    <a href="./timetable/index.html" target="_blank">Try It Now</a>
+                    <a href="./time_table/timetable.html" target="_blank">Try It Now</a>
                 </div>
             </div>
         </section>
@@ -427,7 +427,7 @@
                 <div class="contact-info">
                     <p><strong>Email:</strong> <a href="mailto:pokharel.anki123@gmail.com">pokharel.anki123@gmail.com</a></p>
                     <p><strong>Facebook:</strong> <a href="https://www.facebook.com/ankita.pokharel.2025/" target="_blank">Ankita Pokharel</a></p>
-                    <p><strong>Instagram:</strong> <a href="https://www.instagram.com/invites/contact/?utm_source=ig_contact_invite&utm_medium=copy_link&utm_content=rsjrnpf" target="_blank">@ankita.pokharel</a></p>
+                    <p><strong>Instagram:</strong> <a href="https://www.instagram.com/ankitapokharel33?igsh=bmllYzl2ZjU0dXho" target="_blank">@ankita.pokharel</a></p>
                     <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/ankita-pokharel-755a672a4" target="_blank">Ankita Pokharel</a></p>
                 </div>
                <form id="contactForm" class="contact-form">
